Finished scanning and UI enhancement

--- a/SickLeaveEmailAutomation.WPF/SickLeaveEmailAutomation.WPF.csproj
+++ b/SickLeaveEmailAutomation.WPF/SickLeaveEmailAutomation.WPF.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\bigger_ico.png" />
+    <None Remove="Resources\small_ico.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <COMReference Include="WIA">
       <WrapperTool>tlbimp</WrapperTool>
       <VersionMinor>0</VersionMinor>
@@ -17,6 +22,15 @@
       <Isolated>false</Isolated>
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\bigger_ico.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\small_ico.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
