Gmail service implementation and email sending

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /SickLeaveEmailAutomation.WPF/Resources/client_secret_85105905093-hbtg5m422nbs70qq8456rjg2ofeneioo.apps.googleusercontent.com.json
 /.gitignore
+/SickLeaveEmailAutomation.WPF/Resources/credentials.json
